--- a/project4/css/styles.css
+++ b/project4/css/styles.css
@@ -4,7 +4,7 @@ body{
     letter-spacing: .5px;
     line-height: 1.5;
     padding: 10%;
-    font-family: stratos, sans-serif;
+    font-family:'Roboto', sans-serif;
     font-weight: 400;
     font-style: normal;
 }
