--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -1,16 +1,9 @@
-
 body{
     letter-spacing: .5px;
     line-height: 1.5;
     font-family: courier-std, monospace;
     font-weight: 400;
     font-style: normal;
-}
-
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 812px) 
-  and (-webkit-min-device-pixel-ratio: 3) { 
 }
 
 a:link{
@@ -24,6 +17,18 @@ a:visited{
 img{
     max-width: 100%;
 }
+
+.container{
+position: relative;
+text-align: center;
+color: white;
+}
+
+.title {
+  position: absolute;
+  top: 5px;
+  left: 16px;
+}    
 
 li {
   background: white;
