--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -30,50 +30,33 @@ color: white;
   left: 16px;
 }    
 
-li {
-  background: white;
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-areas: 
-    "product product product product product"
-    ". . s m l";
-  grid-template-columns: 2fr 3fr 1fr 1fr 1fr;
-  padding: 1rem;
-  width: 100%;
+list li {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
-
-@media screen and (min-width: 680px) {
-  li {
-    grid-template-areas:
-      "product dots s m l";
-  }
-}
-
 .product {
-  grid-area: product;
+  flex: 1;
+  position: relative;
 }
-.dots::after{
-    grid-area: dots;
-    border-bottom: 2px dotted #999;
-    content: '';
-    position: absolute;
-    top: .7rem;
-    width: 100%;
-    z-index: 0;
-}
-}
-.small {
-  grid-area: s;
-}
-.medium {
-  grid-area: m;
-}
-.large {
-  grid-area: l;
-}
-ul {
+.product::after {
+  border-bottom: 2px dotted #999;
+  content: '';
+  position: absolute;
+  top: .7rem;
   width: 100%;
-padding-left: 50px;
-padding-right: 50px;
+  z-index: 0;
 }
-
+.product h4 {
+  background: #fff;
+  display: inline-block;
+  padding-right: .5rem;
+  position: relative;
+  z-index: 1;
+}
+.prices {
+  display: flex;
+}
+.price {
+  padding: 0 .5rem;
+}
