--- a/Charlies/css/styles.css
+++ b/Charlies/css/styles.css
@@ -63,13 +63,13 @@ li{
     color: white;
     margin-top: 100px;
     
-    
+ 
 }
-#hayden{
-     display: inline-block;
-}
-#bio{
-    display: inline-block;
+.footer-wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    padding: 3rem;
 }
 
 .description{
