--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -5,7 +5,10 @@ body{
     font-weight: 400;
     font-style: normal;
 }
-
+.list{
+    list-style: none;
+}
+}
 a:link{
     text-decoration: none;
     color: white;
@@ -30,7 +33,7 @@ color: white;
   left: 16px;
 }    
 
-list li {
+.list li {
   display: flex;
   justify-content: space-between;
   margin-bottom: 1rem;
@@ -43,7 +46,7 @@ list li {
   border-bottom: 2px dotted #999;
   content: '';
   position: absolute;
-  top: .7rem;
+  top: 2.4rem;
   width: 100%;
   z-index: 0;
 }
