--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -104,6 +104,7 @@ h2{
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 40px;
     padding: 3rem;
+    width: 100%;
 }
 .description{
     font-size: 14px;
