--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -52,8 +52,9 @@ h1 {
 }
 h2{
     display: flex;
-    font: 18px;
+    font: 2em;
 }
+
 .list li {
   display: flex;
   justify-content: space-between;
@@ -89,9 +90,8 @@ h2{
     margin-right: 100px;
     margin-top: 100px;
     margin-bottom: 100px;
-    font-size: 16px;
-    text-align: center;
-    
+    font-size: 1.2em;
+    text-align: center;   
 }
 .footer{
     background-color: #3e403f; 
