--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -1,6 +1,3 @@
-html { 
-    font-size: 2vw; 
-}
 body{
     letter-spacing: .5px;
     line-height: 1.5;
@@ -37,7 +34,7 @@ h1 {
     top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 2em; 
+    font-size: 3em; 
 }
 
 .topnav {
@@ -107,5 +104,5 @@ h2{
     width: 100%;
 }
 .description{
-    font-size: 1em;
+    font-size: .8em;
 }
