--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -19,8 +19,11 @@ a:visited{
     color: white;
 }
 
-img{
+img{    
+    display: block;
     width: 100%;
+    height: auto;
+    
 }
 
 .heading{
