--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -37,7 +37,7 @@ h1 {
     top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 2.4em; 
+    font-size: 2em; 
 }
 
 .topnav {
@@ -59,6 +59,8 @@ h2{
 .about{
     display: flex;
     font: 2em;
+    position: relative;
+    padding: 1rem;
 }
 .list li {
   display: flex;
