--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -19,11 +19,8 @@ a:visited{
     color: white;
 }
 
-img{    
-    display: block;
+img{
     width: 100%;
-    height: auto;
-    
 }
 
 .heading{
@@ -37,13 +34,13 @@ h1 {
     top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 2em; 
+    font-size: 3em; 
 }
 
 .topnav {
     position: absolute;
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 0px;
     padding: 1rem;
     top: 0%;
     left: 5px;
@@ -56,8 +53,6 @@ h2{
     font: 2em;
 }
 
-
-}
 .list li {
   display: flex;
   justify-content: space-between;
@@ -66,6 +61,7 @@ h2{
 .product {
   flex: 1;
   position: relative;
+    font-size: 1em;
 }
 .product::after {
   border-bottom: 2px dotted #999;
@@ -74,6 +70,7 @@ h2{
   top: 2.4rem;
   width: 100%;
   z-index: 0;
+display: flex;
 }
 .product h4 {
   background: #fff;
@@ -86,14 +83,14 @@ h2{
   display: flex;
 }
 .price {
-  padding: 0 .5rem;
+  padding: .5rem;
 }
 .about{
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 30px;
+    margin-right: 30px;
     margin-top: 100px;
     margin-bottom: 100px;
-    font-size: 1.2em;
+    font-size: 1em;
     text-align: center;   
 }
 .footer{
@@ -109,5 +106,5 @@ h2{
     padding: 3rem;
 }
 .description{
-    font-size: .8em;
+    font-size: .7em;
 }
