--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -36,15 +36,17 @@ h1 {
     transform: translate(-50%, -50%);
     font-size: 3em; 
 }
-
+.title{
+    font-size: 2vw;
+}
 .topnav {
     position: absolute;
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 0px;
     padding: 1rem;
     top: 0%;
     left: 5px;
-    font-size: 16px;
+    font-size: 2.2vw;
     text-align: left;
     
 }
@@ -96,16 +98,23 @@ display: flex;
 .footer{
     background-color: #3e403f; 
     width: 100%;
-    color: white;    
+    color: white; 
+    margin-top: 30px;
+    
 }
 
+ul{
+    margin-right: 40px;
+}
 .footer-wrapper{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 40px;
     margin-left: 30px;
     margin-right: 30px;
+    margin-top: 30px;
     background-color: #3e403f;
+    font-size: .9em;
 }
 .description{
     font-size: .7em;
@@ -113,4 +122,5 @@ display: flex;
 .contact-info{
     display: flex;
     width:100%;
+    margin-bottom: 30px;
 }
