--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -124,3 +124,21 @@ ul{
     width:100%;
     margin-bottom: 30px;
 }
+
+
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+
+h1 {
+   font-size: 3vw; 
+      
+}
+      
+.topnav {
+    font-size: 1vw;
+      }
+
+      
