--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -46,7 +46,7 @@ h1 {
     padding: 1rem;
     top: 0%;
     left: 5px;
-    font-size: 2.2vw;
+    font-size: 20px;
     text-align: left;
     
 }
