--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -34,7 +34,7 @@ h1 {
     top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 3em; 
+    font-size: 1.6em; 
 }
 .title{
     font-size: 3vw;
@@ -46,7 +46,7 @@ h1 {
     padding: 1rem;
     top: 0%;
     left: 5px;
-    font-size: 20px;
+    font-size: 1em;
     text-align: left;
     
 }
@@ -88,11 +88,11 @@ display: flex;
   padding: .5rem;
 }
 .about{
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 70px;
+    margin-right: 70px;
     margin-top: 100px;
     margin-bottom: 100px;
-    font-size: 1em;
+    font-size: 1.2em;
     text-align: center;   
 }
 .footer{
@@ -109,12 +109,13 @@ ul{
 .footer-wrapper{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
     grid-gap: 40px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 30px;
     background-color: #3e403f;
-    font-size: 1.9vw;
+    font-size: 16px;
 }
 .description{
     font-size: .7em;
@@ -126,18 +127,16 @@ ul{
 }
 
 
-@media only screen 
-  and (min-device-width: 414px) 
-  and (max-device-width: 736px) 
-  and (-webkit-min-device-pixel-ratio: 3)
-  and (orientation: portrait) { 
-
-h1 {
-   font-size: 6vw;     
+@media all and (max-width: 600px) {
+    .h1 {font-size: 4vw;}
+    .topnav {font-size: 3vw;}
+    .about {font-size: 3vw;}
+    .footer-wrapper {font-size:10px;}
 }
-      
-.topnav {
-    font-size: 3vw;
-      }
 
+@media all and (max-width: 400px) {
+    .h1 {font-size: 4vw;}
+    .topnav {font-size: 3vw;}
+    .about {font-size: 3vw;}
+    .footer-wrapper {font-size:10px;}
 }
